--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-spin" [fullScreen] = "true"><p style="color: white" > Espere... </p></ngx-spinner>
 <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
 <app-body
 [collapsed]="this.isSideNavCollapsed"
