--- a/src/app/Components/sidenav/sidenav.component.html
+++ b/src/app/Components/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="navVisible" class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed' : ''">
     <div class="logo-container">
       <button class="logo" (click)="toggleCollapse()">S</button>
-      <div class="logo-text" *ngIf="collapsed">SISOL</div>
+      <div class="logo-text" *ngIf="collapsed">SIBI</div>
       <button class="btn-close" *ngIf="collapsed" (click)="closeSideNav()">
         <i class="fal fa-times close-icon"></i>
       </button>
