--- a/src/app/Components/settings/settings.component.html
+++ b/src/app/Components/settings/settings.component.html
@@ -1,1 +1,50 @@
-<p>settings works!</p>
+<div class="container pad">
+    <form [formGroup]="form" (ngSubmit)="Actualizar()">
+        <h1>Modificar datos de usuario</h1>
+        <hr>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Nombre</label>
+                    <input type="text"  formControlName="nombre" class="form-control" required>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Apellido</label>
+                    <input type="text" formControlName="apellido" class="form-control" required>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="">Nueva contraseña</label> <span class="eyeIcon" style="padding-left: 5px;" (click)="viewpass()"><i
+                        [ngClass]="visible?'eyeIcon fas fa-eye-slash':'eyeIcon fas fa-eye'" tippy="Ver contraseña"></i></span>
+                    <input [type]="changeType?'password':'text'" class="form-control" name="contraseniaActual" formControlName="contraseniaActual" [class.red-icon]="this.form.get('contraseniaActual')?.invalid" />
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Confirmar contraseña</label>
+                    <input [type]="changeType?'password':'text'" class="form-control" name="contraseniaNuevo" formControlName="contraseniaNuevo" [class.red-icon]="this.form.get('contraseniaNuevo')?.invalid" />
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Correo Electrónico</label>
+                    <input formControlName="email" class="form-control" [disabled]="isDisabled">
+                </div>
+            </div>
+            <div class="col-md-6 py-4">
+                <div class="form-group d-flex justify-content-center">
+                    <button type="submit" [disabled]="form.invalid" class="btn btnVerde">Actualizar</button>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
