Listado de libros

--- a/src/app/Components/products/products.component.html
+++ b/src/app/Components/products/products.component.html
@@ -104,7 +104,7 @@
           <label for="descripcion">Descripción*</label>
           <textarea formControlName="descripcion" class="form-control" rows="4" required></textarea>
           <small *ngIf="form.get('descripcion')?.invalid && form.get('descripcion')?.touched">
-            La descripción es requerida
+            La descripción es requerida, máximo 200 caracteres 
           </small>
         </div>
       </div>
