--- a/src/app/Components/register/register.component.html
+++ b/src/app/Components/register/register.component.html
@@ -42,11 +42,11 @@
         <div class="row">
             <div class="d-grid py-2">
                 <button class="btn btnAzul" [disabled]="form.invalid" type="submit">Crear
-                    cuenta</button>
+                    usuario</button>
             </div>
             <div class="d-grid py-2">
                 <button type="button" class="btn btnGris" routerLink="/">Ya tengo
-                    cuenta</button>
+                    usuario</button>
             </div>
         </div>       
     </form>
