--- a/src/app/Components/settings/settings.component.html
+++ b/src/app/Components/settings/settings.component.html
@@ -1,7 +1,7 @@
 <div class="container pad">
     <!-- <div class="container pad bg-light rounded-3 p-4"></div> -->
     <form [formGroup]="form" (ngSubmit)="Actualizar()" class="container rounded-4">
-        <h1>Modificar datos de usuario {{rolUsuario}}</h1>
+        <h1>Modificar datos de usuario rol: {{rolUsuario}}</h1>
         <hr>
         <div class="row">
             <div class="col-md-6">
